crates/convertor/tests/snapshots/url_builder_test__parse_clash_url-2.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: raw_url
---
ConvUrl {
    type: Raw,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "SfxJSAferU_ckMID-y4NAqzOwSEai63Qmc_NTOl1bIXJ8Q3oj3UJH4zd6brEe6Eai7YLPY8CuL4Kk9PdpWGx7zRkXCiPtNhaEMxOrmQMg3Ox1kaQ3jYmYoV1Yu91q0SktsQ",
            client: Clash,
            interval: 86400,
            strict: Some(
                true,
            ),
            proxy_provider_name: None,
            policy: None,
        },
    ),
}
