crates/convertor/tests/snapshots/url_builder_test__parse_clash_url-3.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: profile_url
---
ConvUrl {
    type: Profile,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "ydgGuWMN4VNtPe__koDVXi2nZPSRnfIGRDpMJ8u1AAJ6_cS4TZIknmA4ndSpezqtfwIP7LGq4RJNgv71-h9tPJSFJ1v-oqYdh6jcak1ksoPCy9mZEare_7e6IGVDWIgYoeQ",
            client: Clash,
            interval: 86400,
            strict: Some(
                true,
            ),
            proxy_provider_name: None,
            policy: None,
        },
    ),
}
