crates/convertor/tests/snapshots/url_builder_test__parse_clash_url-5.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_url
---
ConvUrl {
    type: RuleProvider,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "Gb1xIRj0e3SVXiWjl7Ae4Q6LgLmo9OXPaTbcPwdT6R-D3Uc43EvO7q5pKqw2QqfldQfCELdjP34vyX1cmSZ-p3rJQR2yHnB7ZJxE5xpANweqB3Cmz63Fs-d0sTLeax8mMNE",
            client: Clash,
            interval: 86400,
            strict: Some(
                true,
            ),
            policy: Some(
                Policy {
                    name: "BosLife",
                    option: None,
                    is_subscription: false,
                },
            ),
        },
    ),
}
