crates/convertor/tests/snapshots/url_builder_test__parse_clash_url-6.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_url
---
ConvUrl {
    type: RuleProvider,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "kW8oMPwN60-Lo_46f6Lwz0MlgN25TTW07Jm0Liuibdgkc1Qwch56nI4bx9uzJ5qZdi3hOnPz-DPRJYT4NuidAJPoMYQZhy4iSargk1yLLkFHjN0oAeCi5od3Nl2Z3PRngWA",
            client: Clash,
            interval: 86400,
            strict: Some(
                true,
            ),
            policy: Some(
                Policy {
                    name: "BosLife",
                    option: Some(
                        "no-resolve",
                    ),
                    is_subscription: false,
                },
            ),
        },
    ),
}
