crates/convertor/tests/snapshots/url_builder_test__parse_clash_url-8.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_url
---
ConvUrl {
    type: RuleProvider,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "NLJDhoz9FdPwcQKXJxGFZ38gJG5rWIdZaepY2hgT1u9f7T56iTZ8FlIW3QodJLBJINUsXxtWITKDeEOlDe9xJZ_1mD809zCcK-LYPsWrWUMHc6TuFKsuqWpxiDRsWDeifGw",
            client: Clash,
            interval: 86400,
            strict: Some(
                true,
            ),
            policy: Some(
                Policy {
                    name: "DIRECT",
                    option: None,
                    is_subscription: false,
                },
            ),
        },
    ),
}
